--- a/src/blocks/modules/calendar/calendar.html
+++ b/src/blocks/modules/calendar/calendar.html
@@ -73,7 +73,7 @@
                 <button class="date-item">2</button>
             </div>
             <div class="calendar-date">
-                <button class="date-item">3</button>
+                <button class="date-item active" >3</button>
             </div>
             <div class="calendar-date">
                 <button class="date-item date-today">4</button>
@@ -103,13 +103,13 @@
             <div class="calendar-date">
                 <button class="date-item">9</button>
             </div>
-            <div class="calendar-date">
+            <div class="calendar-date calendar-range range-start">
                 <button class="date-item">10</button>
             </div>
-            <div class="calendar-date">
+            <div class="calendar-date calendar-range">
                 <button class="date-item">11</button>
             </div>
-            <div class="calendar-date">
+            <div class="calendar-date calendar-range">
                 <button class="date-item badge js-calendar-mob">12</button>
                 <div class="calendar-events">
                     <div class="calendar-event calendar-event--green" data-id="#event_3">
@@ -117,28 +117,28 @@
                     </div>
                 </div>
             </div>
-            <div class="calendar-date">
+            <div class="calendar-date calendar-range">
                 <button class="date-item">13</button>
             </div>
-            <div class="calendar-date">
+            <div class="calendar-date calendar-range">
                 <button class="date-item">14</button>
             </div>
-            <div class="calendar-date">
+            <div class="calendar-date calendar-range">
                 <button class="date-item">15</button>
             </div>
-            <div class="calendar-date"> <!-- calendar-range  range-start-->
+            <div class="calendar-date calendar-range"> <!-- calendar-range  range-start-->
                 <button class="date-item">16</button>
             </div>
-            <div class="calendar-date "> <!--calendar-range -->
+            <div class="calendar-date calendar-range "> <!--calendar-range -->
                 <button class="date-item">17</button>
             </div>
-            <div class="calendar-date "><!--calendar-range -->
+            <div class="calendar-date calendar-range "><!--calendar-range -->
                 <button class="date-item">18</button>
             </div>
-            <div class="calendar-date"><!--calendar-range -->
+            <div class="calendar-date calendar-range"><!--calendar-range -->
                 <button class="date-item">19</button>
             </div>
-            <div class="calendar-date  "><!--calendar-range range-end-->
+            <div class="calendar-date calendar-range  "><!--calendar-range range-end-->
                 <button class="date-item badge js-calendar-mob">20</button>
                 <div class="calendar-events">
                     <div class="calendar-event calendar-event--green" data-id="#event_4">
@@ -152,17 +152,17 @@
                     <a class="calendar-event calendar-event--show-more js-calendar-more" href="#"> <div class="calendar-event__name">Еще 5 событий</div></a>
                 </div>
             </div>
-            <div class="calendar-date">
+            <div class="calendar-date calendar-range">
                 <button class="date-item">21</button>
             </div>
-            <div class="calendar-date">
+            <div class="calendar-date calendar-range">
                 <button class="date-item">22</button>
             </div>
-            <div class="calendar-date">
+            <div class="calendar-date calendar-range">
                 <button class="date-item">23</button>
             </div>
-            <div class="calendar-date">
-                <button class="date-item">24</button>
+            <div class="calendar-date calendar-range range-end">
+                <button class="date-item ">24</button>
             </div>
             <div class="calendar-date">
                 <button class="date-item">25</button>
